--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <link rel="icon" href="/icons/icon-192.png" sizes="192x192">
     <title>Kendall South — Provider Credential Tracker (Website Only)</title>
   </head>
+  <script type="module">
+  // Importar Firebase desde CDN
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+  import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
+
+  // Configuración de tu proyecto Firebase
+  const firebaseConfig = {
+    apiKey: "TU_API_KEY",
+    authDomain: "TU_PROYECTO.firebaseapp.com",
+    projectId: "TU_PROYECTO",
+    storageBucket: "TU_PROYECTO.appspot.com",
+    messagingSenderId: "1234567890",
+    appId: "1:1234567890:web:abcdef123456"
+  };
+
+  // Inicializar Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  // Función para guardar la ruta del logo en Firebase
+  async function guardarLogo() {
+    await setDoc(doc(db, "usuarios", "roxana"), {
+      logo: "/icons/logo.png"
+    });
+    console.log("Logo guardado en Firebase");
+  }
+
+  // Función para cargar el logo desde Firebase
+  async function cargarLogo() {
+    const docRef = doc(db, "usuarios", "roxana");
+    const docSnap = await getDoc(docRef);
+
+    if (docSnap.exists()) {
+      document.querySelector("#logo").src = docSnap.data().logo;
+    } else {
+      console.log("No hay datos guardados");
+    }
+  }
+
+  // Ejecutar las funciones
+  guardarLogo();
+  cargarLogo();
+</script>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
