--- a/index.html
+++ b/index.html
@@ -1,113 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#0e1530"/>
-    <link rel="manifest" href="/manifest.webmanifest">
-    <link rel="icon" href="/icons/icon-192.png" sizes="192x192">
-    <title>Kendall South — Provider Credential Tracker (Website Only)</title>
+    <title>Kendall South Credentialing</title>
+    <link rel="stylesheet" href="/src/index.css" />
   </head>
-  <script type="module">
-  // Importar Firebase desde CDN
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
-  import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
-
-  // Configuración de tu proyecto Firebase
-  const firebaseConfig = {
-    apiKey: "TU_API_KEY",
-    authDomain: "TU_PROYECTO.firebaseapp.com",
-    projectId: "TU_PROYECTO",
-    storageBucket: "TU_PROYECTO.appspot.com",
-    messagingSenderId: "1234567890",
-    appId: "1:1234567890:web:abcdef123456"
-  };
-
-  // Inicializar Firebase
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  // Función para guardar la ruta del logo en Firebase
-  async function guardarLogo() {
-    await setDoc(doc(db, "usuarios", "roxana"), {
-      logo: "/icons/logo.png"
-    });
-    console.log("Logo guardado en Firebase");
-  }
-
-  // Función para cargar el logo desde Firebase
-  async function cargarLogo() {
-    const docRef = doc(db, "usuarios", "roxana");
-    const docSnap = await getDoc(docRef);
-
-    if (docSnap.exists()) {
-      document.querySelector("#logo").src = docSnap.data().logo;
-    } else {
-      console.log("No hay datos guardados");
-    }
-  }
-
-  // Ejecutar las funciones
-  guardarLogo();
-  cargarLogo();
-</script>
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
-  import { getFirestore, doc, setDoc, getDoc, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
-
-  // Configuración de tu proyecto Firebase
-  const firebaseConfig = {
-    apiKey: "TU_API_KEY",
-    authDomain: "TU_PROYECTO.firebaseapp.com",
-    projectId: "TU_PROYECTO",
-    storageBucket: "TU_PROYECTO.appspot.com",
-    messagingSenderId: "1234567890",
-    appId: "1:1234567890:web:abcdef123456"
-  };
-
-  // Inicializar Firebase
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  // Guardar información de usuario (puede ser formulario, logo, configuraciones, etc.)
-  async function guardarInfo(usuarioId, datos) {
-    // Puedes usar setDoc para sobreescribir datos
-    await setDoc(doc(db, "usuarios", usuarioId), datos);
-    console.log("Información guardada");
-  }
-
-  // Leer información del usuario
-  async function cargarInfo(usuarioId) {
-    const docRef = doc(db, "usuarios", usuarioId);
-    const docSnap = await getDoc(docRef);
-
-    if (docSnap.exists()) {
-      console.log("Datos:", docSnap.data());
-      return docSnap.data();
-    } else {
-      console.log("No hay datos guardados");
-      return null;
-    }
-  }
-
-  // Ejemplo de uso: guardar logo y nombre
-  guardarInfo("roxana", {
-    logo: "/icons/logo.png",
-    nombre: "Roxana",
-    email: "roxana@example.com"
-  });
-
-  // Ejemplo de uso: cargar información
-  cargarInfo("roxana").then(data => {
-    if(data){
-      document.querySelector("#logo").src = data.logo;
-      document.querySelector("#nombre").textContent = data.nombre;
-    }
-  });
-</script>
-
   <body>
-    <div id="root"></div>
+    <header>
+      <nav class="navbar">
+        <ul class="nav-links">
+          <li><a href="/">Main Home</a></li>
+          <li><a href="/about">About Us</a></li>
+          <li><a href="/services">Services</a></li>
+          <li><a href="/contact">Contact Us</a></li>
+          <li><a href="/insurances">Insurances</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="root"></main>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
