--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Kendall South Credentialing</title>
     <link rel="stylesheet" href="/src/index.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <ul class="nav-links">
-          <li><a href="/">Main Home</a></li>
-          <li><a href="/about">About Us</a></li>
-          <li><a href="/services">Services</a></li>
-          <li><a href="/contact">Contact Us</a></li>
-          <li><a href="/insurances">Insurances</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main id="root"></main>
-
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
