--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kendall South Credentialing</title>
+    <title>Kendall South Medical Center — Provider Credential Tracker</title>
   </head>
-  <body>
+  <body class="bg-navy text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
