--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kendall South Medical Center — Provider Credential Tracker</title>
+    <title>Kendall South Dashboard</title>
   </head>
-  <body class="bg-navy text-white">
+  <body class="bg-gray-50">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
