--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body class="bg-navy text-white">
     <div id="root"></div>
+    <!-- jsPDF from CDN for runtime PDF generation -->
+    <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
