--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kendall South Medical Center — Provider Credential Tracker</title>
   </head>
-  <body class="bg-navy text-white">
+  <body>
     <div id="root"></div>
-    <!-- jsPDF from CDN for runtime PDF generation -->
     <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
