--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <title>Kendall South Medical Center - Credentialing</title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kendall South Medical Center — Provider Credential Tracker</title>
   </head>
-  <body>
+  <body class="bg-navy text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
